--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,27 @@ body {
     height: 100vh;
 }
 
+main {
+    background-color: cornflowerblue;
+    height: 70vh;
+    padding:40px;
+}
+
+header {
+    background: white;
+    padding: 20px;
+    text-align: center;
+}
+
+#title {
+    color: red;
+    font-size: 280%;
+    font-family: roboto, sans-serif;
+    text-transform: uppercase;
+}
+
+
+/* Style the container */
 .container {
     width: 800px;
     max-width: 80%;
@@ -22,6 +43,36 @@ body {
     margin-top: 30px;
 }
 
-h1 {
-    color: red;
+#intro {
+    text-align: center;
+    font-size: 2rem;
+    padding: 10px;
+}
+label {
+    color: limegreen;
+    font-size: 30px;
+}
+
+#user-input {
+    width: 100%;
+    text-align: center;
+}
+
+#fname {
+    width: 250px;
+    height: 40px;
+    border: 1px solid black;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 30px;
+}
+
+.btn {
+    width: 100px;
+    border: 1px solid black;
+    background-color: aqua;
+    border-radius: 5px;
+    margin: 20px 0;
+    padding: 10px;
+    cursor: pointer;
 }
