Add innerHTML to gameboard when play is clicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,9 @@ header {
 
 
 /* Style the container */
-.container {
+
+
+#game-board {
     width: 800px;
     max-width: 80%;
     background-color: white;
@@ -41,6 +43,7 @@ header {
     box-shadow: 0 0 10px 2px;
     margin: 0 auto;
     margin-top: 30px;
+
 }
 
 #intro {
@@ -73,6 +76,40 @@ label {
     background-color: aqua;
     border-radius: 5px;
     margin: 20px 0;
+    padding: 10px;
+    cursor: pointer;
+}
+
+/* Footer social media links */
+footer {
+    height: 100px;
+    background-color: white;
+}
+
+.social-networks {
+    text-align: center;
+}
+.social-networks li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 200%;
+    margin: 1%;
+    padding: 1%;
+    color: black;
+}
+
+#copyright {
+    text-align: center;
+}
+
+.game-button {
+    width: 100px;
+    border: 1px solid black;
+    background-color: aqua;
+    border-radius: 5px;
+    margin: 20px;
     padding: 10px;
     cursor: pointer;
 }
