--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,3 +179,39 @@ footer {
 .choice :hover {
     cursor: pointer;
 }
+
+/* Style scoreboard divs */
+.scoreboard {
+    border: 3px solid black;
+    width: 200px;
+    margin: 20px auto;
+    color: black;
+    font-size: 40px;
+    border-radius: 5px;
+    font-family: roboto, sans-serif;
+    padding: 15px 20px;
+    text-align: center;
+    position: relative;
+}
+
+.badge {
+    color: black;
+    font-size: 16px;
+    font-family: roboto, sans-serif;
+    padding: 3px 10px;
+}
+
+#user-label {
+    background: green;
+    position: absolute;
+    top: 30px;
+    left: -25px;
+
+}
+
+#computer-label {
+    background: red;
+    position: absolute;
+    top: 30px;
+    right: -25px;
+}
