Add style to winner page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,3 +239,27 @@ footer {
 #play-again-btn {
     width: 120px;
 }
+
+/* Style winner page */
+
+#winner-page {
+    background-color: green;
+    color: white;
+    text-align: center;
+}
+
+#win-msg {
+    font-size: 3rem;
+}
+
+#final-score {
+    font-size: 2rem;
+}
+
+#game-options-btn {
+    width: 120px;
+}
+
+#play-again-btn {
+    width: 120px;
+}
