--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,12 +181,15 @@ footer {
 /* Style choices div */
 #choices {
     text-align: center;
-    margin: 30px 0 50px 0;
+    margin: 30px 0 30px 0;
 }
 
 .choice {
     display: inline-block;
-    margin: 0 15px;
+}
+
+.choice > img {
+    width: 80%;
 }
 
 .choice :hover {
