--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,10 +302,64 @@ footer {
     /* For large to medium screens sizes from 700px wide and down */
 
     @media screen and (max-width: 700px) {
-      
-         .choice {
+
+        /* opening page */
+        #intro {
+            font-size: 1rem;
+        }
+
+        label {
+            font-size: 1rem;
+        }
+
+        #message {
+            font-size: 1rem;
+        }
+
+        /* game options page */
+
+        #user-options-message {
+            font-size: 1rem;
+        }
+
+        #rules {
+            font-size: 1rem;
+        }
+
+        #video {
+            font-size: 1rem;
+        }
+
+        /* game page */
+
+        .choice {
             width: 60px;
             height: 60px;
             display: inline-block;
         }
+
+        .result p {
+            font-size: 1rem;
+        }
+
+        #action-message {
+            font-size: 1rem;
+        }
+
+        /* win-lose message */
+
+        #win-msg {
+            font-size: 2rem;
+            margin-bottom: 10px;
+        }
+
     } 
+
+/* For small to medium screens sizes from 640px wide and down */
+
+@media screen and (max-width: 640px) {
+    .game-button {
+        display: block;
+        margin: 10px auto;
+    }
+}
