--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,6 +317,23 @@ footer {
     box-shadow: 10px 10px 10px lightgreen;
 }
 
+/* User choice effexts */
+
+.green-glow {
+    border: 4px solid greenyellow;
+    box-shadow: green;
+}
+
+.red-glow {
+    border: 4px solid red;
+    box-shadow: magenta;
+}
+
+.gray-glow {
+    border: 4px solid gray;
+    box-shadow: gray;
+}
+
 /*media queries*/
 
 /* For large to medium screens sizes from 840px wide and down */
