--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,12 +70,17 @@ label {
 
 .btn {
     width: 100px;
-    border: 1px solid black;
+    border: 2px solid white;
     background-color: aqua;
     border-radius: 5px;
     margin: 20px 0;
     padding: 10px;
     cursor: pointer;
+}
+
+.btn:hover {
+    border: 2px solid aqua;
+    background-color: white;
 }
 
 .hide {
@@ -183,12 +188,17 @@ footer {
 
 .game-button {
     width: 100px;
-    border: 1px solid black;
+    border: 2px solid white;
     background-color: aqua;
     border-radius: 5px;
     margin: 20px;
     padding: 10px;
     cursor: pointer;
+}
+
+.game-button:hover {
+    border: 2px solid aqua;
+    background-color: white;
 }
 
 /* Style action message */
