Add style to choice buttons with hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,11 @@ footer {
     width: 80px;
     height: 80px;
     display: inline-block;
+    border-radius: 50%
+}
+
+.choice:hover {
+    border: 3px solid aqua;
 }
 
 .choice > img {
